test/tests/errors/error-class-is-null-need-object2.sm
// true
// false
// false
/**/
/**/

program {
    var i: int = 1;
    output isNull(i);
}